# publish_vive_input

./: CMakeLists.txt  README.md  package.xml
configs/: condition_orders.yaml  control_mappings_pickplace.perspective
include/publish_vive_input/: publish_input.hpp  switch.hpp  utilities.hpp
launch/: calibrate_cam_position.launch  play_sound.launch  publish_vive_input.launch  study_manager.launch  vibrate_vive.launch
msg/: ButtonInfo.msg  ControllerInfo.msg  ControllersInput.msg
scenes/: insertion_1.ttt  insertion_preloaded_can.ttt  insertion_preloaded_star.ttt  large_motion_1.ttt  occlusion_1.ttt  precision_1.ttt  stop_sign.ttt  training.ttt
scenes/feb_11_study/: cluttered_cans.ttt  dynamic_cans.ttt  large_motion_cans.ttt  multitasking_cans.ttt
scenes/full_study/: cluttered_cans.ttt  conditions_training.ttt  controls_training.ttt  dynamic_cans.ttt  insertion_cans.ttt  large_motion_cans.ttt  large_motion_star.ttt  multitasking_cans.ttt  training_cans.ttt
scenes/march_pilot/: pilot.ttt  rivet_wall_ur5.ttt
scenes/scoring test/: cluttered_scoring.ttt
scripts/: annotate_images.py  study_manager.py  task_state_explainer.py
src/: play_sound.py  publish_input.cpp  publish_input_orig.cpp  vibrate_vive.py
